--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/jonatanpedersen/constipated.git"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/jonatanpedersen/constipated/issues"
   },
@@ -22,5 +22,8 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "mocha": "^3.5.3"
+  },
+  "engines": {
+    "node": ">=6"
   }
 }
