--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "dir-compare": "^1.4.0",
+    "fs-extra": "^4.0.2",
     "mocha": "^3.5.3"
   },
   "engines": {
