--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Turns your consts in to vars, relieve those variables.",
   "main": "index.js",
   "scripts": {
+    "cover": "istanbul cover ./node_modules/mocha/bin/_mocha",
+    "coveralls": "npm run cover -- --report lcovonly && cat ./coverage/lcov.info | coveralls",
     "postversion": "git push && git push --tags",
     "preversion": "npm test",
     "test": "mocha"
@@ -23,9 +25,14 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "coveralls": "^2.13.1",
     "dir-compare": "^1.4.0",
+    "eslint": "^4.7.2",
     "fs-extra": "^4.0.2",
-    "mocha": "^3.5.3"
+    "istanbul": "^0.4.5",
+    "mocha": "^3.5.3",
+    "mocha-eslint": "^4.1.0",
+    "mocha-lcov-reporter": "^1.3.0"
   },
   "engines": {
     "node": ">=6"
