--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,8 @@
 	  "dot-notation": 0,
 	  "eol-last": 0,
 	  "eqeqeq": [2, "allow-null"],
-	  "handle-callback-err": 0,
+		"handle-callback-err": 0,
+		"indent": [2, "tab"],
 	  "new-cap": [2, {"capIsNew": false}],
 	  "no-alert": 0,
 	  "no-bitwise": 2,
@@ -15,7 +16,8 @@
 	  "no-empty": 2,
 	  "no-eval": 2,
 	  "no-extra-semi": 2,
-	  "no-irregular-whitespace": 0,
+		"no-irregular-whitespace": 0,
+		"no-mixed-spaces-and-tabs": 2,
 	  "no-multi-spaces": 0,
 	  "no-new": 2,
 	  "no-plusplus": 0,
@@ -24,7 +26,7 @@
 	  "no-shadow": 0,
 	  "no-trailing-spaces": [2, { "skipBlankLines": true }],
 	  "no-undef": 2,
-	  "no-underscore-dangle": 0,
+	  "no-underscore-dangle": 2,
 	  "no-unused-vars": [2, { "vars": "all", "args": "none" }],
 	  "no-use-before-define": 0,
 	  "object-shorthand": 0,
